--- a/server/public/style.css
+++ b/server/public/style.css
@@ -11,3 +11,15 @@ nav {
   display: flex;
   justify-content: space-around;
 }
+
+#students {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 30px;
+  margin: 50px;
+}
+img {
+  height: 700px;
+  width: 900px;
+}
