--- a/server/public/style.css
+++ b/server/public/style.css
@@ -12,7 +12,7 @@ nav {
   justify-content: space-around;
 }
 
-#students {
+.widgets {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
